deploy_hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello-container
          image: letanthang/hello-world
          ports:
            - containerPort: 3000
              name: web
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "75Mi"
              cpu: "75m"
