deploy_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.12
          ports:
            - containerPort: 80
              name: nginx
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "75Mi"
              cpu: "75m"
