pod_multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-cont
  labels:
    app: multi
spec:
  containers:
    - image: letanthang/hello-world
      name: hello-cont
      ports:
        - containerPort: 3000
          name: web
      resources:
        requests:
          memory: "50Mi"
          cpu: "50m"
        limits:
          memory: "75Mi"
          cpu: "75m"
    - image: nginx:1.12
      name: nginx-containers
      ports:
        - containerPort: 80
          name: ngix-cont
      resources:
        requests:
          memory: "50Mi"
          cpu: "50m"
        limits:
          memory: "75Mi"
          cpu: "75m"
