service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-svc
spec:
  selector:
    app: multi
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 80
      name: nginxoport
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: helloport
  type: LoadBalancer
