service_hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: helloport
  type: NodePort
