service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 80
      name: nginxoport
  type: NodePort
